# oge_inf

./: Cargo.toml  README.md
src/: login.rs  main.rs
src/excersise/: excersise_1.rs  excersise_10.rs  excersise_12.rs  excersise_14.rs  excersise_15.rs  excersise_2.rs  excersise_3.rs  excersise_5.rs  excersise_6.rs  excersise_7.rs  exercise_4.rs  exercise_8.rs  mod.rs
src/exercise/: exercise_1.rs  exercise_10.rs  exercise_11.rs  exercise_12.rs  exercise_14.rs  exercise_15.rs  exercise_2.rs  exercise_3.rs  exercise_4.rs  exercise_5.rs  exercise_6.rs  exercise_7.rs  exercise_8.rs  exercise_9.rs  mod.rs
